--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DevVoca</string>
+    <string name="home_fragment">홈</string>
+    <string name="favorite_fragment">즐겨찾기</string>
+    <string name="my_page_fragment">My</string>
 </resources>
